add module/broadcast_event method
